--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,8 @@
 		"xstring": "cpp",
 		"xtr1common": "cpp",
 		"xutility": "cpp",
-		"*.tcc": "cpp"
+		"*.tcc": "cpp",
+		"thread": "cpp",
+		"mutex": "cpp"
 	}
 }
