--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,13 @@
 		"xutility": "cpp",
 		"*.tcc": "cpp",
 		"thread": "cpp",
-		"mutex": "cpp"
-	}
+		"mutex": "cpp",
+		"forward_list": "cpp",
+		"optional": "cpp",
+		"string_view": "cpp",
+		"iomanip": "cpp"
+	},
+	"C_Cpp.default.systemIncludePath": [
+		"${config:vexrobotics.vexcode.Cpp.Sdk.Home}\\V5\\V5_20220726_10_00_00\\vexv5\\gcc\\include\\sys"
+	]
 }
