--- a/website/package.json
+++ b/website/package.json
@@ -8,7 +8,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "docs": "cd .. && doxygen -"
   },
   "devDependencies": {
     "@astrojs/sitemap": "^3.0.0",
