fix deployment weirdness

--- a/website/package.json
+++ b/website/package.json
@@ -8,14 +8,15 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "docs": "cd .. && doxygen -"
+    "astro": "astro"
   },
   "devDependencies": {
     "@astrojs/sitemap": "^3.0.0",
     "@astrojs/solid-js": "^3.0.1",
     "@babel/core": "^7.23.0",
     "astro": "^3.2.0",
-    "solid-js": "^1.7.12"
+    "shiki": "^0.14.4",
+    "solid-js": "^1.7.12",
+    "vite": "^4.0.0"
   }
 }
