continue work on pros support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,7 +66,9 @@
 		"optional": "cpp",
 		"string_view": "cpp",
 		"iomanip": "cpp",
-		"condition_variable": "cpp"
+		"condition_variable": "cpp",
+		"complex": "cpp",
+		"cinttypes": "cpp"
 	},
 	"C_Cpp.default.systemIncludePath": [
 		"${config:vexrobotics.vexcode.Cpp.Sdk.Home}\\V5\\V5_20220726_10_00_00\\vexv5\\gcc\\include\\sys"
